# Rusher

./: .gitignore  Cargo.toml  LICENSE  README.md  RENAME_SUMMARY.md  test_scanner.rs  test_scanner_debug.rs
.claw/sessions/e1dc196c690c2b78/: session-1776387189905-0.jsonl  session-1776416751982-0.jsonl  session-1776416751982-0.rot-1776418789715.jsonl  session-1776416751982-0.rot-1776419097301.jsonl  session-1776427069943-0.jsonl
config/: default.toml  development.toml  test.toml
memory/: 2026-04-14_project_code_familiarization_and_fixes.md
src/: counter.rs  error.rs  lib.rs  main.rs
src/config/: loader.rs  mod.rs  models.rs
src/dns/: cache.rs  cache.rs.backup  mod.rs  resolver.rs  server.rs
src/http/: client.rs  error.rs  mod.rs  request.rs  response.rs
src/scanner/: cache.rs  github.rs  mod.rs  scanner.rs
src/utils/: logging.rs  mod.rs  signal.rs
tests/: basic_tests.rs  dns_test.rs
