[package]
name = "rusher"
version = "0.1.0"
edition = "2021"
description = "GitHub DNS加速器 - Rust实现"
authors = ["FastGithub Team"]
license = "MIT"
repository = "https://github.com/yourusername/rusher"
readme = "README.md"
keywords = ["dns", "github", "accelerator", "network"]
categories = ["network-programming", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# HTTP客户端（使用 rustls，避免 OpenSSL 依赖）
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# DNS服务器
hickory-proto = "0.24"
hickory-server = "0.24"
hickory-resolver = "0.24"

# 配置管理
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"

# 命令行解析
clap = { version = "4.0", features = ["derive"] }

# IP地址处理
ipnetwork = "0.20"
cidr = "0.2"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 缓存
moka = { version = "0.12", features = ["sync"] }

# 实用工具
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
once_cell = "1.18"
rand = "0.8"
url = "2.4"
parking_lot = "0.12"
futures = "0.3"

# 网络工具
socket2 = "0.5"
# trust-dns-proto = "0.22"  # 暂时注释掉，避免 OpenSSL 依赖

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
[[bin]]
name = "rusher"
path = "src/main.rs"

[[bin]]
name = "dns-test"
path = "tests/dns_test.rs"
